[metadata]
name = brain-data-preproc
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Scripts to download, bidsify and preprocess public datasets
long_description = file:README.md
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/braindataprep

[options]
python_requires = >= 3.6
install_requires =
    click
    requests
    nibabel

[options.extras_require]
ixi = xlrd
oasis1 =
oasis2 = openpyxl
oasis = openpyxl
all = xlrd openpyxl

[options.package_data]
* =
    freesurfer/lut/*
    datasets/IXI/templates/*
    datasets/IXI/templates/*/*
    datasets/OASIS/I/templates/*
    datasets/OASIS/II/templates/*
