[metadata]
name = braindataprep
author = Yael Balbastre
author_email = yael.balbastre@gmail.com
description = Scripts to download, bidsify and preprocess public datasets
long_description = file:README.md
platforms = OS Independent
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/braindataprep

[options]
python_requires = >= 3.10
install_requires =
    requests        # HTTP requests
    fasteners       # Locks
    cyclopts        # CLI
    nibabel         # Neuroimaging formats
    pyout           # Display download status in a nice table
    humanize        # Convert various numbers into human form

[options.extras_require]
ixi =
    xlrd            # Excel xls
oasis1 =
    openpyxl        # Excel xlsx
oasis2 =
    openpyxl        # Excel xlsx
oasis3 =
oasis =
    braindataprep[oasis1]
    braindataprep[oasis2]
    braindataprep[oasis3]
all =
    braindataprep[ixi]
    braindataprep[oasis]

[options.package_data]
* =
    freesurfer/lut/*
    datasets/IXI/templates/*
    datasets/IXI/templates/*/*
    datasets/OASIS/I/templates/*
    datasets/OASIS/II/templates/*
    datasets/OASIS/III/templates/*
    datasets/OASIS/III/templates/phenotypes/*
    datasets/OASIS/III/templates/phenotypes/*/*

[options.entry_points]
console_scripts =
    bdp = braindataprep.cli:runapp
